# advent-of-code

./: .gitignore
2023/: Cargo.toml
2023/01/: day1.cpp  day1.rs  day1emil.rs
2023/02/: day2.rs
2023/03/: day3.rs
2023/06/: day6.cpp
2023/1/: day1.rs
2023/2/: day2.cpp
2023/3/: day3.cpp
2023/4/: day4.cpp
2023/5/: day5.cpp
2023/6/: day6.cpp
2023/shared/: input.rs  lib.rs  print.rs
2024/: Cargo.toml  gyat.h
2024/01/: day1.cpp  day1.gyat  day1.rs
2024/02/: day2.cpp
2024/03/: day3.cpp
2024/04/: day4.cpp
2024/05/: day5.cpp
2024/1/: day1.cpp  day1.rs  day1_std_sort.cpp  gyat.cpp
2024/2/: day2.cpp  day2.rs
2024/3/: day3.cpp
2024/inputs/: README.md
2025/: Cargo.toml
2025/01/: day1.rs
2025/02/: day2.rs
2025/09/: day9.rs
helpers/: helpers.cpp  helpers.h
