[package]
name = "twenty25"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "day1"
path = "01/day1.rs"

[[bin]]
name = "day2"
path = "02/day2.rs"

[[bin]]
name = "day3"
path = "03/day3.rs"

[[bin]]
name = "day4"
path = "04/day4.rs"

[[bin]]
name = "day5"
path = "05/day5.rs"

[[bin]]
name = "day6"
path = "06/day6.rs"

[[bin]]
name = "day7"
path = "07/day7.rs"

[[bin]]
name = "day8"
path = "08/day8.rs"

[[bin]]
name = "day9"
path = "09/day9.rs"

[dependencies]
